Initial commit with portfolio website

--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video Editor Portfolio | Cinematic Storytelling</title>
-    <meta name="description" content="Professional video editor specializing in cinematic content, YouTube videos, and scroll-stopping reels. Transform your raw footage into compelling stories." />
-    <meta name="author" content="Video Editor" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <title>Kiran Video Editor</title>
+    <meta
+      name="description"
+      content="Professional video editor specializing in cinematic content, YouTube videos, and scroll-stopping reels. Transform your raw footage into compelling stories."
+    />
+    <meta name="author" content="Sri Kiran Sai Yarramsetti" />
+
     <link rel="canonical" href="https://editor-portfolio.com" />
 
-    <meta property="og:title" content="Video Editor Portfolio | Cinematic Storytelling" />
-    <meta property="og:description" content="Professional video editor specializing in cinematic content, YouTube videos, and scroll-stopping reels." />
+    <meta property="og:title" content="Kiran Video Editor" />
+    <meta
+      property="og:description"
+      content="Professional video editor specializing in cinematic content, YouTube videos, and scroll-stopping reels."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@editor" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Syne:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
